--- a/index0.html
+++ b/index0.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تخصص السيارات بمدرسة الدلنجات الصناعية بنين</title>
     <link href="templatemo-3d-coverflow.css" rel="stylesheet">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2839721033235125"
+     crossorigin="anonymous"></script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2839721033235125"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXX"
@@ -121,4 +123,5 @@
 <script src="templatemo-3d-coverflow-scripts.js"></script>
 
 </body>
+
 </html>
