--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تخصص السيارات بمدرسة الدلنجات الصناعية بنين</title>
   <link rel="stylesheet" href="style1.css" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2839721033235125"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXX"
@@ -19,4 +21,5 @@
   </div>
   <script src="script1.js"></script>
 </body>
+
 </html>
