--- a/page1.html
+++ b/page1.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تخصص السيارات بمدرسة الدلنجات الصناعية بنين</title>
   <link rel="stylesheet" href="style.css">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2839721033235125"
+     crossorigin="anonymous"></script>
 </head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXX"
          crossorigin="anonymous"></script>
@@ -53,3 +55,4 @@
 ```
 
 ---
+
