--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
 }
 </style>
 <head>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2839721033235125"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXX"
@@ -42,4 +43,5 @@
 </div>
 
 </body>
+
 </html>
