--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>سياسة الخصوصية</title>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2839721033235125"
+     crossorigin="anonymous"></script>
   <style>
     body {
       background-color: #e8f5e9;
@@ -73,4 +75,5 @@
 <script src="js/earnings.js"></script>
 </body>
 </html>
+
 	
