--- a/pages.html
+++ b/pages.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>عرض ملفات  - تخصص السيارات</title>
   <style>
+	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2839721033235125"
+     crossorigin="anonymous"></script>
     body {
       font-family: 'Arial', sans-serif;
       direction: rtl;
@@ -51,5 +53,6 @@
 
 ملحوظة مهمة:
 - تأكد إن أسماء الملفات داخل مجلد pdf مكتوبة بنفس الطريقة بالضبط، وبالأخص المسافات.
+
 
 لو تحب نضيف زر تحميل أو صورة خلفية أو شعار للموقع، بلغني أكملها لك
