--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 	<a href="about.html">من نحن</a>  |
 	<a href="index1.html">مفكرة </a>  |
 	<a href="index0.html">زملائى </a></center>  |
+	<a href="pages.html">اختبارا لطلابى الاعزاء </a></center>  |
   </h3></nav>
   <div class="icons">
   </div>
@@ -156,4 +157,5 @@
 </footer>
 
 </html>
+
 
