--- a/page3.html
+++ b/page3.html
@@ -13,7 +13,7 @@
   <h1 class="main-title">الصف الثالث</h1>
 <marquee class="marquee3" direction="right" scrollamount="10" style="color: white; background-color: #007bff; padding: 10px; font-weight: bold;">
   أهلاً بكم في صفحة الصف الثالث – نرجو لكم تجربة تعليمية ممتعة. نفخر بأن نقدم هذا الموقع كنافذة تعليمية لطلاب قسم السيارات، حيث نعرض فيه مشاريعنا وأعمالنا في مجال الميكانيكا والتكنولوجيا الحديثة للسيارات.
-</marquee>هدفنا هو تأهيل جيل جديد من الفنيين المهرة، القادرين على مواكبة التطور في عالم السيارات، من خلال بيئة تعليمية تطبيقية متكاملة.
+هدفنا هو تأهيل جيل جديد من الفنيين المهرة، القادرين على مواكبة التطور في عالم السيارات، من خلال بيئة تعليمية تطبيقية متكاملة.
 </marquee>
   <header>
     <h1 class="third-title">الصف الثالث – الأنشطة والوسائط التعليمية</h1>
@@ -51,6 +51,7 @@
 <script src="js/earnings.js"></script>
 </body>
 </html>
+
 
 
 
